--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                     
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://instagram.com/spacedrinks2022?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i></a>
-                    <a class="mx-2" href="https://www.youtube.com/channel/UCSFq5h-Xb33zFOhAt4WFuZg"><i class="fa-brands fa-youtube"></i></a>
+                    <a class="mx-2" target="_blank" href="https://instagram.com/spacedrinks2022?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i></a>
+                    <a class="mx-2" target="_blank" href="https://www.youtube.com/channel/UCSFq5h-Xb33zFOhAt4WFuZg"><i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
         </section>
