--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                <div class="project-text my-auto text-center text-lg-left">
                                     <h4 class="text-white">Cardápio</h4>
                                     <p class="mb-0 text-white">Nosso cardápio no Space Drinks foi cuidadosamente elaborado para atender aos paladares mais exigentes e proporcionar uma experiência gastronômica completa aos nossos clientes. Com uma combinação de pratos saborosos e uma variedade de opções de bebidas, garantimos que você encontrará algo que agrade ao seu gosto.</p>
                                     <a class="btn btn-cardapio" target="_blank" href="https://drive.google.com/file/d/1A7RAuoxQkuzZHpAEfq4U32BxAD_3wJ0-/view">ABRA AQUI</a>
