--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/img-cardapio.png" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
+                            <div class="d-flex">
                                 <div class="project-text my-auto text-center text-lg-left">
                                     <h4 class="text-white">Cardápio</h4>
                                     <p class="mb-0 text-white">Nosso cardápio no Space Drinks foi cuidadosamente elaborado para atender aos paladares mais exigentes e proporcionar uma experiência gastronômica completa aos nossos clientes. Com uma combinação de pratos saborosos e uma variedade de opções de bebidas, garantimos que você encontrará algo que agrade ao seu gosto.</p>
@@ -230,7 +230,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Rola Cansada</div></footer>
+        <footer class="footer small text-center text-white-50"><div class="container px-4 px-lg-5 txt-copy">Copyright &copy; Rola Cansada</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
