--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div id="projeto-segundo" class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/img-cardapio.png" alt="..." /></div>
                     <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
+                        <div class="bg-black text-center project">
                             <div class="d-flex">
                                 <div class="project-text my-auto text-center text-lg-left">
                                     <h4 class="text-white">Cardápio</h4>
