--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/carousel.css">
+
+
 </head>
 
 <body id="page-top">
@@ -94,19 +96,22 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             </ol>
             
-            <div class="carousel-inner carousel-slide tamanho-carousel">
+            <div class="carousel-inner carousel- tamanho-carousel">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="./assets/img/bg-masthead.png"
                         alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/img/whiskye.png" alt="Second slide">
+                    <img class="d-block w-100" src="./assets/img/1.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/img/cerveja.png" alt="Third slide">
+                    <img class="d-block w-100" src="./assets/img/2.png" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/img/cerveja.png" alt="Third slide">
+                    <img class="d-block w-100" src="./assets/img/3.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/4.png" alt="Third slide">
                 </div>
             </div>
 
