--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body id="page-top">
 
     <!-- Modal -->
-    <!-- <div id="myModal" class="modal">
+    <div id="myModal" class="modal">
         <div class="modal-content">
             <h3>Você tem mais de 🔞 anos</h3>
             <div class="modal-buttons">
@@ -39,7 +39,7 @@
             </a>
         </div>
 
-    </div> -->
+    </div>
 
     <script>
         // Quando a página é carregada
