--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     </section>
     <!-- Footer-->
     <footer class="footer small text-center text-white-50">
-        <div class="container px-4 px-lg-5 txt-copy">Copyright &copy; Rola Cansada</div>
+        <div class="container px-4 px-lg-5 txt-copy">Copyright &copy; Turma 0214</div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
